--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,13 +73,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.RateDepp"
+    namespace "com.RateKunst"
     defaultConfig {
-        applicationId "com.RateDepp"
+        applicationId "com.RateKunst"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
     }
     signingConfigs {
         debug {
