--- a/ios/Ratepfosten.xcodeproj/xcshareddata/xcschemes/Ratepfosten.xcscheme
+++ b/ios/Ratepfosten.xcodeproj/xcshareddata/xcschemes/Ratepfosten.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RateDepp.app"
-               BlueprintName = "RateDepp"
-               ReferencedContainer = "container:RateDepp.xcodeproj">
+               BuildableName = "RateKunst.app"
+               BlueprintName = "RateKunst"
+               ReferencedContainer = "container:RateKunst.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "RateDeppTests.xctest"
-               BlueprintName = "RateDeppTests"
-               ReferencedContainer = "container:RateDepp.xcodeproj">
+               BuildableName = "RateKunstTests.xctest"
+               BlueprintName = "RateKunstTests"
+               ReferencedContainer = "container:RateKunst.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RateDepp.app"
-            BlueprintName = "RateDepp"
-            ReferencedContainer = "container:RateDepp.xcodeproj">
+            BuildableName = "RateKunst.app"
+            BlueprintName = "RateKunst"
+            ReferencedContainer = "container:RateKunst.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RateDepp.app"
-            BlueprintName = "RateDepp"
-            ReferencedContainer = "container:RateDepp.xcodeproj">
+            BuildableName = "RateKunst.app"
+            BlueprintName = "RateKunst"
+            ReferencedContainer = "container:RateKunst.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
