--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,10 +75,10 @@ android {
 
     namespace "com.RateKunst"
     defaultConfig {
-        applicationId "com.RateKunst"
+        applicationId "com.RateDepp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
+        versionCode 3
         versionName "1.0.1"
     }
     signingConfigs {
